--- a/app/src/main/res/drawable/login_btn_back_03.xml
+++ b/app/src/main/res/drawable/login_btn_back_03.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="@color/theme_background"
-        android:startColor="@color/theme_background" />
+        android:endColor="@color/color_F23648"
+        android:startColor="@color/color_F23648" />
     <!-- 指定圆角矩形的4个圆角的半径 -->
     <corners android:topLeftRadius="5dp"
              android:topRightRadius="5dp"
