--- a/app/src/main/res/drawable/realname_start.xml
+++ b/app/src/main/res/drawable/realname_start.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:shape="rectangle">
-    <corners android:radius="45dp"/>
-    <solid android:color="#FCCD00"/>
+    <corners android:radius="5dp"/>
+    <solid android:color="@color/color_F23648"/>
 
 </shape>
