--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,6 @@
     <dimen name="dp_40">40dp</dimen>
 
     <dimen name="split_line_height">0.5dp</dimen>
+    <dimen name="nine_remommend_goods_margen">5dp</dimen>
+    <dimen name="found_item_padding">10dp</dimen>
 </resources>
