--- a/app/src/main/res/layout/found_item_layout.xml
+++ b/app/src/main/res/layout/found_item_layout.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/nine_remommend_goods_margen"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:padding="@dimen/dp_10">
+    android:padding="@dimen/found_item_padding">
 
     <!--顶部布局-->
     <LinearLayout
@@ -74,8 +76,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/top_ly"
-        android:layout_marginBottom="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_20"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_10"
         android:text=""
         android:textColor="@color/gray02"
         android:textSize="13sp" />
