--- a/app/src/main/res/layout/three_tab_header_layout.xml
+++ b/app/src/main/res/layout/three_tab_header_layout.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/three_tab_header_layout"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_F7F7F7"
+    android:orientation="vertical">
 
     <com.zhouwei.mzbanner.MZBannerView
         android:id="@+id/banner"
@@ -12,8 +13,8 @@
         android:layout_height="160dp"
         app:canLoop="true"
         app:indicatorAlign="right"
-        app:middle_page_cover="false"
         app:indicatorPaddingRight="6dp"
+        app:middle_page_cover="false"
         app:open_mz_mode="false" />
 
     <ImageView
@@ -21,16 +22,13 @@
         android:layout_width="match_parent"
         android:layout_height="156dp"
         android:scaleType="centerCrop"
-        android:layout_marginBottom="8dp"
         android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/three_tab_rv_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="12dp"
-        android:layout_gravity="center"
-        android:paddingRight="12dp"/>
+        android:layout_gravity="center" />
 
 
 </LinearLayout>
