--- a/app/src/main/res/layout/activity_tel_login.xml
+++ b/app/src/main/res/layout/activity_tel_login.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f4f5f9"
     android:orientation="vertical">
 
     <com.tudouni.makemoney.view.MyTitleBar
@@ -9,69 +10,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-
+    <!--手机号 + 验证码 界面-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#f4f5f9"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
+        <include layout="@layout/tel_login" />
+
+        <include
+            layout="@layout/password_login_child_layout"
+            android:visibility="gone" />
+
+    </LinearLayout>
+    <!--输入邀请码-->
+    <LinearLayout
+        android:id="@+id/invitation_code_ly"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="20dp"
             android:background="@color/white"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="+86"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
-
-            <EditText
-                android:id="@+id/etTelNumber"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@null"
-                android:hint="请输入手机号码"
-                android:inputType="number"
-                android:maxLength="11"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:text=""
-                android:textColor="@android:color/black"
-                android:textColorHint="@color/color_BDBDBD"
-                android:textScaleX="0.99"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/tvCode"
-                android:layout_width="80dp"
-                android:layout_height="30dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/get_vcode_style_01"
-                android:gravity="center"
-                android:text="获取验证码"
-                android:textColor="@color/color_999999"
-                android:textSize="13sp" />
-
-        </LinearLayout>
-
-        <View
-            style="@style/split_line"
-            android:layout_above="@+id/main_bottom" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/white">
+            android:visibility="visible">
 
             <TextView
                 android:layout_width="80dp"
@@ -82,36 +48,12 @@
                 android:textSize="15sp" />
 
             <EditText
-                android:id="@+id/etCode"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@null"
-                android:hint="请输入验证码"
-                android:inputType="number"
-                android:maxLength="6"
-                android:textColor="@android:color/black"
-                android:textColorHint="@color/color_BDBDBD"
-                android:textScaleX="0.99"
-                android:textSize="15sp" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            android:visibility="gone">
-
-            <EditText
                 android:id="@+id/etInvitCode"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
-                android:hint="邀请码（选填）"
+                android:hint="请输入邀请码"
                 android:maxLength="8"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
@@ -120,27 +62,55 @@
                 android:textSize="16sp" />
 
         </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="40dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tvLogin"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/login_button_selector"
-                android:gravity="center"
-                android:text="@string/login"
-                android:textColor="@color/color_999999"
-                android:textSize="15sp" />
-        </LinearLayout>
-
-
     </LinearLayout>
+    <!--确认按钮-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="25dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvLogin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/login_button_selector"
+            android:gravity="center"
+            android:text="@string/login"
+            android:textColor="@color/color_999999"
+            android:textSize="15sp" />
+    </LinearLayout>
+    <!--切换登录方式和忘记密码-->
+    <RelativeLayout
+        android:id="@+id/other_login_ly"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="13dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/loss_password_tv"
+            style="@style/color_999999_13_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:paddingRight="13dp"
+            android:text="@string/lossPasswordhint"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/login_mode_change_view"
+            style="@style/color_E81833_13_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="right"
+            android:text="@string/tudouni_password_login_change" />
+
+    </RelativeLayout>
+
 </LinearLayout>
