--- a/app/src/main/res/layout/password_login_child_layout.xml
+++ b/app/src/main/res/layout/password_login_child_layout.xml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pwd_login_ly"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/password_layout_1"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:layout_marginTop="0dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:visibility="gone"
         android:gravity="center_vertical">
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/login_head_icon"/>
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="手机号"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/phone_number_et"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:background="@android:color/transparent"
-            android:hint="@string/input_phone_number_hint"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="6dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="@string/input_phone_number_hint"
             android:inputType="number"
-            android:lines="1"
             android:maxLength="11"
-            android:textCursorDrawable="@null"
+            android:maxLines="1"
+            android:singleLine="true"
             android:textColor="@color/color_333333"
             android:textColorHint="@color/color_999999"
-            android:textSize="14sp" />
+            android:textScaleX="0.99"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
@@ -40,8 +45,7 @@
         android:id="@+id/password_login_child_layout_line"
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:visibility="gone"
-        android:background="@color/color_cccccc"/>
+        android:background="@color/color_cccccc" />
 
     <LinearLayout
         android:id="@+id/password_layout_2"
@@ -50,38 +54,30 @@
         android:layout_marginTop="0dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:visibility="gone"
         android:gravity="center_vertical">
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/login_pw_icon"/>
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/pass_word"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/comfirm_pasword_et"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="6dp"
-            android:background="@android:color/transparent"
-            android:hint="@string/password_login_input_hint"
-            android:inputType="textPassword"
-            android:lines="1"
-            android:maxLength="16"
-            android:textCursorDrawable="@null"
-            android:textColorHint="@color/color_999999"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请输入密码"
+            android:inputType="number"
+            android:maxLength="6"
             android:textColor="@color/color_333333"
-            android:textSize="14sp" />
+            android:textColorHint="@color/color_999999"
+            android:textScaleX="0.99"
+            android:textSize="15sp" />
 
     </LinearLayout>
-
-    <View
-        android:id="@+id/password_login_child_layout_line2"
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:visibility="gone"
-        android:background="@color/color_cccccc"/>
-
-
-</merge>
+</LinearLayout>
