--- a/app/src/main/res/layout/tel_login.xml
+++ b/app/src/main/res/layout/tel_login.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/code_login_ly"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/tel_phone_ll_layout_1"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:layout_marginTop="0dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:gravity="center_vertical">
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/login_head_icon"/>
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="手机号"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/etTelNumber"
@@ -33,7 +37,7 @@
             android:textColor="@color/color_333333"
             android:textColorHint="@color/color_999999"
             android:textScaleX="0.99"
-            android:textSize="14sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tvCode"
@@ -48,22 +52,21 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/tel_login_line"
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/color_cccccc" />
+    <View style="@style/split_line" />
 
     <LinearLayout
         android:id="@+id/tel_phone_ll_layout_2"
         android:layout_width="match_parent"
-        android:layout_height="44dp">
+        android:layout_height="44dp"
+        android:background="@color/white">
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/login_pw_icon"/>
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/vcode"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/etCode"
@@ -78,12 +81,7 @@
             android:textColor="@color/color_333333"
             android:textColorHint="@color/color_999999"
             android:textScaleX="0.99"
-            android:textSize="14sp" />
+            android:textSize="15sp" />
     </LinearLayout>
 
-    <View
-        android:id="@+id/tel_login_line1"
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/color_cccccc" />
-</merge>
+</LinearLayout>
