修改提现点击事件

--- a/app/src/main/res/layout/header_my_earnings.xml
+++ b/app/src/main/res/layout/header_my_earnings.xml
@@ -65,6 +65,7 @@
                     android:id="@+id/tv_withdraw"
                     android:background="@drawable/shape_earnings_withdraw"
                     android:textSize="13sp"
+                    android:onClick="@{()->earnings.toWithdrawPage()}"
                     android:paddingLeft="10dp"
                     android:paddingTop="2dp"
                     android:paddingBottom="2dp"
