--- a/app/src/main/res/layout/activity_tel_login.xml
+++ b/app/src/main/res/layout/activity_tel_login.xml
@@ -12,6 +12,7 @@
 
     <!--手机号 + 验证码 界面-->
     <LinearLayout
+        android:id="@+id/login_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -43,7 +44,7 @@
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="@string/vcode"
+                android:text="@string/invitation_code"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
