--- a/app/src/main/res/layout/found_item_layout.xml
+++ b/app/src/main/res/layout/found_item_layout.xml
@@ -50,19 +50,18 @@
         <LinearLayout
             android:id="@+id/share_ly"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:gravity="top"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_share" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginLeft="3dp"
                 android:text="分享"
                 android:textColor="@color/color_F23648"
