--- a/app/src/main/res/layout/item_earnings.xml
+++ b/app/src/main/res/layout/item_earnings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -15,15 +16,29 @@
         android:onClick="@{()->income.toOrderPage()}"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:drawableLeft="@{income.getIcon()}"
-            android:gravity="center_vertical"
+        <LinearLayout
             android:paddingLeft="20dp"
-            android:text="@{income.getDesc()}"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_height="50dp">
+            <ImageView
+                android:layout_width="24dp"
+                android:scaleType="fitXY"
+                android:layout_gravity="center_vertical"
+                app:imageSrc="@{income.getIcon()}"
+                android:layout_height="24dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+
+                android:text="@{income.getDesc()}"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+
 
         <View
             android:layout_width="match_parent"
