--- a/app/src/main/res/layout/activity_realname_final.xml
+++ b/app/src/main/res/layout/activity_realname_final.xml
@@ -40,6 +40,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
+                android:gravity="center_vertical"
                 android:text=""
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/hintColor"
@@ -75,7 +76,8 @@
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/hintColor"
                 android:textScaleX="0.99"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:gravity="center_vertical"/>
 
         </LinearLayout>
     </LinearLayout>
