--- a/app/src/main/res/layout/header_my_earnings.xml
+++ b/app/src/main/res/layout/header_my_earnings.xml
@@ -195,7 +195,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="37dp"
                 android:layout_alignParentRight="true"
-                android:text="您的排名未上榜，仍需努力"
+                android:text="@{earnings.mineRankInfo}"
                 android:textColor="#1a9bfc"
                 android:textSize="12sp" />
 
