--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/listview"
     android:orientation="horizontal"
     android:padding="@dimen/dp_10">
@@ -15,11 +15,10 @@
         android:src="@mipmap/ic_arrow_red" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dp_22"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_toRightOf="@+id/iteam_icon"
         android:orientation="vertical">
 
         <LinearLayout
@@ -33,6 +32,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:singleLine="true"
                 android:text="系统消息"
                 android:textColor="#333333"
                 android:textSize="16sp" />
@@ -51,12 +51,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="通知内容内容内容内容内容..."
+            android:text="通知..."
             android:textColor="#C2C2C2"
             android:textSize="13sp" />
-
-
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
