修改登录界面UI

--- a/app/src/main/res/drawable/login_button_selector_gra_phone.xml
+++ b/app/src/main/res/drawable/login_button_selector_gra_phone.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape>
-            <gradient android:centerColor="#C4AAB4" android:endColor="#C4AAB4" android:startColor="#C4AAB4" />
+            <gradient android:centerColor="#FFCEBB" android:endColor="#FFCEBB" android:startColor="#FFCEBB" />
             <corners android:radius="5dp" />
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape>
-            <gradient android:centerColor="#C4AAB4" android:endColor="#C4AAB4" android:startColor="#C4AAB4" />
+            <gradient android:centerColor="#FFCEBB" android:endColor="#FFCEBB" android:startColor="#FFCEBB" />
             <corners android:radius="5dp" />
         </shape>
     </item>
@@ -17,7 +17,7 @@
     <item android:state_selected="false">
         <shape>
             <corners android:radius="5dp"></corners>
-            <solid android:color="#aaC4AAB4"></solid>
+            <solid android:color="#aaFFCEBB"></solid>
         </shape>
     </item>
 </selector>
