1.修改我的界面的UI 2.海报分享界面只有微信

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -232,7 +232,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@mipmap/ticket_background"
                 android:orientation="vertical">
                 <!--输入邀请码-->
                 <LinearLayout
@@ -292,7 +291,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/user_view_middle_height"
                     android:background="@color/white"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:id="@+id/ly_share_wx"
