--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -165,12 +165,24 @@
                         android:textColor="@color/white"
                         android:textSize="15sp" />
                 </LinearLayout>
-
             </LinearLayout>
-
         </LinearLayout>
-
-
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/im_close"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/ic_close" />
+    </LinearLayout>
+
 
 </RelativeLayout>
